# ai-coding-agent-system

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  run_cli.bat  run_ui.bat
.github/workflows/: ci.yml
docs/: AGENT_SYSTEM_PAPER.md  BENCHMARK_RESULTS.md  CANDIDATE_PROFILE.md  CLAUDE_HANDOFF_PROMPTS.md  CODEX_HANDOFF_PROMPTS.md  PAPER_SUBMISSION_PACKAGE.md  PROJECT_UPDATE_LOG.md  PROMPTING_GUIDE.md  SUBMISSION_AND_OUTREACH_PLAN.md  SUBMISSION_MATERIALS.md  UNDERGRAD_AI_WORKFLOW_PAPER.md
research_wiki/: state.json
research_wiki/notes/: Anthropic Prompt Engineering Overview.md  Claude Code Model Configuration.md  Index.md  JOSS Submission Requirements.md  OpenAI Prompt Engineering Guide.md  UIC Undergraduate Research Forum.md
research_wiki/raw/: anthropic_prompt_engineering.md  claude_code_model_config.md  joss_submission.md  openai_prompt_engineering.md  uic_undergraduate_research_forum.md
src/agent_system/: __init__.py  __main__.py  benchmarks.py  config.py  controller.py  doctor.py  llm.py  prompts.py  sessions.py  task_profiles.py  ui.py  validation.py  wiki_ingester.py
src/agent_system/agents/: __init__.py  base.py  coder.py  debugger.py  planner.py  reviewer.py
src/agent_system/static/: app.js  index.html  styles.css
src/agent_system/tools/: executor.py
tests/: test_benchmarks.py  test_controller_parser.py  test_controller_validation.py  test_doctor.py  test_executor.py  test_llm_registry.py  test_sessions.py  test_task_profiles.py  test_wiki_ingester.py
