[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-system"
version = "0.1.0"
description = "A multi-agent coding harness using Anthropic and OpenAI models."
requires-python = ">=3.10"
dependencies = [
  "anthropic",
  "openai",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
